<resources>
    <string name="app_name">Claim Type</string>
    <string name="claimtype_placeholder">Claim Type</string>
    <string name="form_sub_placeholder">Form Submission</string>
    <string name="claim_info_placeholder">Information about the type of claim.</string>
    <string name="first_name">First Name</string>
    <string name="first_name_text">Enter First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="last_name_text">Enter Last Name</string>
    <string name="id_label">ID #</string>
    <string name="benefit_id_text">Benefit ID #</string>

    <string-array name="claimtype_titles">
        <item>Acupuncture</item>
        <item>Chiropractor</item>
        <item>Dental</item>
        <item>Dietician</item>
        <item>Eye Care</item>
        <item>Massage</item>
        <item>Physiotherapy</item>
        <item>Podiatry</item>
        <item>Prescription Drugs</item>
        <item>Psychology</item>
    </string-array>

    <string-array name="claimtype_info">
        <item>Click here for an Acupuncture claim form.</item>
        <item>Click here for a Chiropractor claim form.</item>
        <item>Click here for a Dental claim form.</item>
        <item>Click here for a Dietician claim form.</item>
        <item>Click here for a Eye Care claim form.</item>
        <item>Click here for a Massage claim form.</item>
        <item>Click here for a Physiotherapy claim form.</item>
        <item>Click here for a Podiatry claim form.</item>
        <item>Click here for a Prescription Drugs claim form.</item>
        <item>Click here for a Psychology claim form.</item>
    </string-array>

    <array name="type_images">
        <item>@drawable/acupuncture_header3</item>
        <item>@drawable/chiro_header_3</item>
        <item>@drawable/dental_header</item>
        <item>@drawable/dietician_header_2</item>
        <item>@drawable/header_eye</item>
        <item>@drawable/massage_therapy_1</item>
        <item>@drawable/physiotherapy_header3</item>
        <item>@drawable/podiatry_header</item>
        <item>@drawable/prescription_drugs4</item>
        <item>@drawable/psychology_header_white</item>

    </array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="claimInfo_text_header">Claim Information</string>
    <string name="provider_first_name">Provider First Name</string>
    <string name="provider_first_name_hint">Provider First Name (Optional)</string>
    <string name="provider_last_name">Provider Last Name</string>
    <string name="provider_last_name_hint">Provider Last Name (If Applicable)</string>
    <string name="clinic_company_name_label">Clinic/Company Name</string>
    <string name="phone_hint">(555) 555-5555</string>
    <string name="address_label">Address</string>
    <string name="address_hint">Street Address</string>
    <string name="postal_code_label">Postal Code</string>
    <string name="postal_code_hint">T3M 1R2</string>
    <string name="province_label">Province</string>
    <string name="country_label">Country</string>
    <string name="country_hint">Country</string>
    <string name="radio_workplace_injury">Workplace Injury</string>
    <string name="radio_vehicle_accident">Vehicle Accident</string>
    <string name="radio_doctors_referral">Doctor\'s Referral</string>
    <string name="date_label">Date of Service Provided</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="total_price_label">Total Price Charged $</string>
    <string name="total_price_hint">$0.00</string>
    <string name="submit_button_text">Submit</string>
    <string name="phone_label_text">Phone</string>
    <string name="company_name_hint">Clinic/Company Name (If Applicable)</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_help">Help</string>
    <string name="claim_form_titlebar">Claim Form</string>
    <string name="login_message_text">Please enter your login information</string>
    <string name="menu_logout">Logout</string>
    <string name="username_label">Username:</string>
    <string name="username_text">john.doe@gwl.ca</string>
    <string name="password_label">Password:</string>
    <string name="login_button">Login</string>
    <string name="help_text">\tThis app is used to take a picture of a benefits receipt received from a physician, physiotherapists, pharmacy,
        or any other health care practitioner or facility, and fill out a pre-determined benefits form of your choosing.\n\n</string>
    <string name="first_help_text">\tFirst, select a <b><i>Claim Type</i></b> from the dashboard menu (i.e. Chiropractor, Dental, Prescription Drugs etc). This will then take you to the benefits Claim Form screen.\n
        </string>
    <string name="second_help_text">\tSecond, make sure your First and Last Name are correct, then you may fill out the selected claim form, <b>OR</b> click on the camera button which will then open you camera.
        Once the camera has opened you are now able to take a picture of the receipt you wish to submit.
        Make sure the image captures all of the information on the receipt and that all relevant information is legible.
        When you are happy with the image taken, select <b>OK</b>, and the app will fill out most of the necessary information for you.\n\n
        </string>
    <string name="third_help_text">\tThird, make sure all of the required fields are filled in, and double check all necessary information has been filled in,
        then hit the <b>SUBMIT</b> button when you wish to enter the form for your benefits claim. You are now FINISHED.
        If you wish, you can also save a copy of the form as a PDF to your phone or send it as an email, to save the form for your own records.</string>
    <string name="contact_title">Contact Information</string>
    <string name="contact_information_phone">\tPlease contact us with any issues, concerns, or feedback anytime at (548) 388\-4953.</string>
    <string name="contact_information_email">You can also email us here at; Chris.Pollock@londonlife.com or,\n Teran.Bukenberger@londonlife.com</string>

    <string-array name="province_array">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland &amp; Labrador</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </string-array>
    
    <string-array name="firstnames">
        <item>Chris</item>
        <item>Teran</item>
        <item>James</item>
        <item>Colin</item>
    </string-array>

    <string-array name="lastnames">
        <item>Pollock</item>
        <item>Bukenberger</item>
        <item>Bond</item>
        <item>Patterson</item>
    </string-array>

    <string-array name="idNumbers">
        <item>339944</item>
        <item>447722</item>
        <item>552288</item>
        <item>110077</item>
    </string-array>

    <string-array name="usernames">
        <item>Chris.Pollock@londonlife.com</item>
        <item>Teran.Bukenberger@londonlife.com</item>
        <item>test@google.com</item>
        <item>Colin@google.com</item>
    </string-array>

    <string-array name="passwords">
        <item>wolverine</item>
        <item>camera</item>
        <item>test</item>
        <item>fionn</item>
    </string-array>
</resources>
