<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.claimtypedashboard1.HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        <TextView
            android:id="@+id/first_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_help_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        <TextView
            android:id="@+id/second_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_help_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
        <TextView
            android:id="@+id/third_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_help_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    </LinearLayout>
</ScrollView>
